[package]
name = "lemon-tree-derive"
version = "1.0.1"
authors = ["Jeremiah Shaulov <jeremiah.shaulov@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["lemon"]
categories = ["parsing"]
description = "Helper crate for lemon-tree. Rust-way parser builder."
repository = "https://github.com/jeremiah-shaulov/lemon-tree-derive"

[lib]
proc-macro = true

[features]
dump-grammar = []
dump-lemon-grammar = []

[dependencies]
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["full"]}
quote = "1.0"
once_cell = "1.0"
lemon-mint = "0.1"
